--- a/server/package.json
+++ b/server/package.json
@@ -5,20 +5,28 @@
   "main": "server.js",
   "scripts": {
     "test": "jest server/validationTests/user.test.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "lint": "eslint . --max-warnings 0 --fix && echo 'All files pass ESLint rules!'",
+    "format": "prettier --check ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "express-validator": "^7.1.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.7",
     "babel-jest": "^29.7.0",
-    "express-validator": "^7.1.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
+    "prettier": "3.3.2",
     "supertest": "^7.0.0"
   },
   "jest": {
