"feat: unit test automatically with yml"

--- a/.gitviewer/lint-and-format.yml
+++ b/.gitviewer/lint-and-format.yml
@@ -1,9 +1,9 @@
 name: Lint and Format Check
 
-on:
-  push:
-    branches:
-      - develop
+# on:
+#   push:
+#     branches:
+#       - develop
 
 jobs:
   lint-and-format:
