--- a/.gitviewer/test_on_merge_pr.yml
+++ b/.gitviewer/test_on_merge_pr.yml
@@ -1,9 +1,9 @@
 name: Run tests on merge or PR to main
 
-# on:
-#   push:
-#     branches:
-#       - develop
+on:
+  push:
+    branches:
+      - develop
 
 jobs:
   run_tests:
