feat: adjust yml of deploying to EC2

--- a/.gitviewer/automated_test.yml
+++ b/.gitviewer/automated_test.yml
@@ -1,12 +1,9 @@
-name: Run tests on merge or PR to main
+name: Run tests on push to develop
 
-# on:
-#   push:
-#     branches:
-#       - develop
-#   pull_request:
-#     branches:
-#       - main
+on:
+  push:
+    branches:
+      - develop
 
 jobs:
   run_tests:
@@ -19,10 +16,7 @@ jobs:
           cd temp
           git clone https://github.com/LilyLin395135/Simple-Server.git
           cd Simple-Server
-          git checkout main
-
-      - name: Change to server directory
-        run: cd /app/temp/Simple-Server/server
+          git checkout develop
 
       - name: Install dependencies
         run: |
