--- a/.gitviewer/deploy_to_ec2.yml
+++ b/.gitviewer/deploy_to_ec2.yml
@@ -1,4 +1,4 @@
-name: Deploy to EC2 on merge
+name: Deploy to EC2 on push to main
 on:
   push:
     branches:
@@ -15,3 +15,4 @@ jobs:
           git pull https://github.com/LilyLin395135/Simple-Server.git
           npm install
           pm2 restart all
+          
