--- a/.gitviewer/setup_new_EC2.yml
+++ b/.gitviewer/setup_new_EC2.yml
@@ -1,8 +1,8 @@
-name: Deploy to EC2 on merge
-# 'on':
-  # push:
-  #   branches:
-  #     - main
+name: Set up new EC2
+# on:
+#   push:
+#     branches:
+#       - main
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -32,3 +32,4 @@ jobs:
           npm install
           sudo npm install pm2 -g
           pm2 start server.js
+          
